--- a/src/scss/utilitaires/_variables.scss
+++ b/src/scss/utilitaires/_variables.scss
@@ -29,6 +29,11 @@ $vertLime: #bbd531;
 $bleuMinuit: #012d61;
 $bleuMarin: #2678B5;
 
+
+$bleuFoncer: #233446;
+$bleuClair: #0F6EDD;
+$blanc: #F0F4F8;
+
 $bleuMoyenTransparent : color.adjust($bleuMoyen, $alpha: -0.50);
 
 /* Autres couleurs */
