--- a/src/scss/base/_bouton.scss
+++ b/src/scss/base/_bouton.scss
@@ -2,34 +2,27 @@
 @use "../utilitaires/variables";
 
 /**
-* @author Prenom Nom courriel
-* @todo Compléter selon l'énoncé de l'exercice
+* @author Morgane Thiebaut
 */
 
-.bouton {
-  background-color: variables.$vertLime;
+button {
+  appearance: none;
+  background-color: variables.$blanc;
   border-radius: 18px;
-  color: black;
+  color: variables.$bleuFoncer;
+  border-color: variables.$bleuFoncer;
+  border-style: solid;
   padding: 0.5em 1em;
-  text-decoration: none;
   &:after {
-    content: "»";
     margin-left: 0.4em;
   }
-  &--hover {
-    background-color: color.adjust(variables.$vertLime, $alpha: -0.25);
+  &:hover {
+    background-color: variables.$bleuFoncer;
+    border-color: variables.$bleuFoncer;
+    color: variables.$blanc;
   }
-  &--active {
-    background-color: color.adjust(variables.$vertLime, $alpha: -0.5);
-  }
-  &--inverse {
-    background-color: white;
-    border: 2px solid variables.$vertLime;
-    &--hover {
-      border-color: color.adjust(variables.$vertLime, $alpha: -0.25);
-    }
-    &--active {
-      border-color: color.adjust(variables.$vertLime, $alpha: -0.5);
-    }
+  &:focus {
+    border-color: variables.$bleuClair;
+    border-width: 4px;
   }
 }
