--- a/public/css/modules/styles_fiche.css
+++ b/public/css/modules/styles_fiche.css
@@ -42,15 +42,31 @@ header {
   }
 }
 
-.ul__li {
-  padding: 10px;
+.formulaire {
+  width: 100%;
+  margin: auto;
+  align-items: center;
 }
 
-.li__element {
-  background-color: black;
-  color: #F0F4F8;
-  padding: 10px;
-  border-radius: 20px;
+section {
+  width: 30%;
+  margin: auto;
+}
+
+input {
+  width: 100%;
+  margin: auto;
+}
+
+.radio_don {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 30px 0;
+}
+
+.radio__label {
+  width: 90%;
 }
 
 legend {
@@ -65,6 +81,15 @@ button {
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+.inactive {
+  pointer-events: none;
+  opacity: 0.5;
+}
+
+.etape4__img {
+  width: 100%;
 }
 
 /*# sourceMappingURL=styles_fiche.css.map */
