--- a/src/scss/modules/styles_fiche.scss
+++ b/src/scss/modules/styles_fiche.scss
@@ -24,23 +24,33 @@ header{
         padding: 0 60px;
     }
 }
-// .etapeSelectionner{
-    
-// }
-.ul__li{
-    padding: 10px;
-}
-.li__element{
-    background-color: black;
-    color: variables.$blanc;
-    padding: 10px;
-    border-radius: 20px;
-}
-
 
 
 .formulaire{
-    
+    width: 100%;
+    margin: auto;
+    align-items: center;
+}
+section{
+    width: 30%;
+    margin: auto;
+}
+input{
+    width: 100%;
+    margin: auto;
+}
+.radio_don{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    // width: 30%;
+    margin: 30px 0;
+}
+// .radio__input{
+//     margin: ;
+// }
+.radio__label{
+    width: 90%;
 }
 
 
@@ -59,4 +69,14 @@ button{
     display: flex;
     flex-direction: row;
     align-items: center;
+}
+
+.inactive {
+    pointer-events: none;
+    opacity: 0.5;
+}
+
+// image de confirmation 
+.etape4__img{
+    width: 100%;
 }
