--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -694,8 +694,29 @@ header {
 }
 
 section {
-  width: 30%;
+  width: 70%;
   margin: auto;
+}
+@media (min-width: 600px) {
+  section {
+    width: 40%;
+  }
+}
+
+.input__postal {
+  width: 70px;
+}
+
+.input__codeSecu {
+  width: 100px;
+}
+
+.input_tel {
+  width: 130px;
+}
+
+.input_nCivique {
+  width: 130px;
 }
 
 input {
@@ -731,6 +752,11 @@ button {
 .inactive {
   pointer-events: none;
   opacity: 0.5;
+}
+
+.etape4 {
+  display: flex;
+  flex-direction: column;
 }
 
 .etape4__img {
