--- a/src/scss/modules/styles_fiche.scss
+++ b/src/scss/modules/styles_fiche.scss
@@ -32,8 +32,23 @@ header{
     align-items: center;
 }
 section{
-    width: 30%;
+    width: 70%;
     margin: auto;
+    @media(min-width: 600px){
+        width: 40%;
+    }
+}
+.input__postal{
+    width: 70px;
+}
+.input__codeSecu{
+    width: 100px;
+}
+.input_tel{
+    width: 130px;
+}
+.input_nCivique{
+    width: 130px;
 }
 input{
     width: 100%;
@@ -77,6 +92,10 @@ button{
 }
 
 // image de confirmation 
+.etape4{
+    display: flex;
+    flex-direction: column;
+}
 .etape4__img{
     width: 100%;
 }
