--- a/public/css/modules/styles_fiche.css
+++ b/public/css/modules/styles_fiche.css
@@ -97,6 +97,14 @@ section {
   width: 130px;
 }
 
+.nRue_input {
+  width: 80%;
+}
+
+.ville_input {
+  width: 80%;
+}
+
 .input_nCivique {
   width: 130px;
 }
@@ -129,6 +137,11 @@ button {
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+.btn_submit {
+  display: block;
+  margin: 2rem auto;
 }
 
 .inactive {
