--- a/src/scss/modules/styles_fiche.scss
+++ b/src/scss/modules/styles_fiche.scss
@@ -71,6 +71,12 @@ section{
 .input_tel{
     width: 130px;
 }
+.nRue_input{
+    width: 80%;
+}
+.ville_input{
+    width: 80%;
+}
 .input_nCivique{
     width: 130px;
 }
@@ -108,6 +114,10 @@ button{
     display: flex;
     flex-direction: row;
     align-items: center;
+}
+.btn_submit{
+    display: block;
+    margin: 2rem auto;
 }
 
 .inactive {
